# LicketySPLIT

./: .gitignore  MANIFEST.in  README.md  example.ipynb  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build-wheels.yml
src/licketysplit/: __init__.py  _core.cpp  _threshold_guessing.py
src/licketysplit/cpp/: licketysplit.cpp
