[build-system]
requires = [
  "setuptools>=64",
  "wheel",
  "pybind11>=2.13",
  "numpy>=1.23"
]
build-backend = "setuptools.build_meta"

[project]
name = "licketysplit"
version = "0.1.2"
description = "Near-optimal decision trees via LicketySPLIT"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "Varun Babbar" },
  { name = "Hayden McTavish" },
  { name = "Zakk Heile" },
  { name = "Margo Seltzer" },
  { name = "Cynthia Rudin" }
]
dependencies = [
  "numpy>=1.23",
  "matplotlib>=3.6",
  "scikit-learn>=1.1",
  "pandas>=1.5"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: C++",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/zakk-h/LicketySPLIT"
Repository = "https://github.com/zakk-h/LicketySPLIT"
Issues = "https://github.com/zakk-h/LicketySPLIT/issues"